Se cambia algo que no es compatible con todas las versiones de IntelliJ, por las dudas.